[package]
name = "c1-extractor"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
edition = "2018"

[dependencies]
clap = { version = "4.4", optional = true, features = ["derive"] }
rusqlite = { version = "0.14.0" }

[lib]
name = "c1"

[[bin]]
name = "dumper"
required-features = ["binaries"]

[features]
default = ["binaries"]
binaries = ["clap"]
